# astro_compiler

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/ast/: ast_fwd.h  expr_nodes.h  stmt_nodes.h  type_nodes.h
src/codegen/: codegen.h  codegen_expr.cpp  codegen_stmt.cpp  codegen_struct.cpp  llvm_codegen.cpp  llvm_codegen.h  llvm_codegen_emit.cpp  llvm_codegen_expr.cpp  llvm_codegen_struct.cpp
src/common/: arena.h  error.h  source_location.h  token.h
src/lexer/: lexer.cpp  lexer.h  lexer_helpers.cpp  lexer_utils.cpp
src/parser/: parser.h  parser_expr.cpp  parser_helpers.cpp  parser_postfix.cpp  parser_stmt.cpp  parser_struct.cpp
src/typechecker/: struct_registry.h  type_env.h  typechecker.cpp  typechecker.h  typechecker_struct.cpp
tests/: factorial  factorial.astro  factorial.astro.c  features  features.astro  features.astro.c  structs.astro
